# adnex

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml  publish.yml
src/adnex/: __init__.py  computation.py  exceptions.py  model.py
src/adnex/validation/: core.py  utils.py  variables.py
src/adnex_model/: __init__.py  model.py  processing.py  validation.py  variables.py
src/tests/: .pylintrc  conftest.py  test_model.py  test_processing.py  test_validation.py
src/utils/: asserts.py  exceptions.py  validation.py
tests/: .pylintrc  conftest.py  test_model.py  test_model_with_invalid_input.py  test_processing.py
tests/adnex/: test_model_with_invalid_input.py
tests/adnex/validation/: test_core.py  test_utils.py  test_vars.py
tests/utils/: test_asserts.py  test_validation.py
tests/validation/: test_core.py  test_utils.py  test_vars.py
