[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term --cov-report html:.cov"
pythonpath = ["src"]
testpaths = ["tests/"]
python_files = "test_*.py"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
show_missing = true
skip_covered = true
skip_empty = true
sort = "Cover"


[tool.pylint.format]
max-line-length = 119

[tool.pycln]
all = true

[tool.isort]
profile = "black"
line_length = 119
remove_redundant_aliases = true
float_to_top = true
order_by_type = true
filter_files = true

[tool.black]
line-length = 119
skip-string-normalization = true


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
