[metadata]
name = adnex
version = 0.1.0
author = Filip Christiansen
author_email = filip.christiansen.2@ki.se
description = A Python package for the ADNEX model.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/filipchristiansen/adnex
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    pandas>=1.0
    numpy>=1.18

[options.packages.find]
where = src
